The changes are commited

--- a/profilepage.html
+++ b/profilepage.html
@@ -34,7 +34,7 @@
 <div class="close-icon">
 <button class="close-btn" id="close-btn"><img class="close" id="close" src="images/close icon.gif" height="50px" width="50px"></button>
 </div>
-<img src="images/sakthi .jpg" class="myphoto">
+<img src="images/sakthi .jpg"0 class="myphoto">
 </div>
 
 <div class="back-bottom">
