--- a/profilepage.html
+++ b/profilepage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+3<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -34,7 +34,7 @@
 <div class="close-icon">
 <button class="close-btn" id="close-btn"><img class="close" id="close" src="images/close icon.gif" height="50px" width="50px"></button>
 </div>
-<img src="images/sakthi .jpg"0 class="myphoto">
+<img src="images/sakthi profile.jpeg" class="myphoto">
 </div>
 
 <div class="back-bottom">
